--- a/index.css
+++ b/index.css
@@ -1,3 +1,34 @@
-body {
-    color: red;
+:root {
+  font-family: poppins, sans-serif;
+}
+.header {
+  background-color: #6c3483;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  border-radius: 5px;
+}
+.logo {
+  width: 150px;
+  padding: 5px;
+  align-items: center;
+  margin: 5px;
+}
+
+.nav-items > ul {
+  display: flex;
+  width: 400px;
+  height: 5px;
+  align-items: center;
+  padding: 20px;
+}
+
+.nav-items > ul > li {
+  font-weight: bold;
+  list-style: none;
+  flex: 1;
+  justify-content: center;
+  text-align: center;
+  color: #fff;
+  margin: 0 16px;
 }
