--- a/index.css
+++ b/index.css
@@ -61,3 +61,25 @@
   flex-wrap: wrap;
   margin: 5px;
 }
+
+.filter {
+  margin: 10px;
+}
+.filter-btn {
+  padding: 10px 20px;
+  background-color: #fff;
+  color: #6c3483;
+  border: 2px solid #6c3483;
+  border-radius: 5px;
+  cursor: pointer;
+  font-size: 16px;
+}
+.filter-btn:active {
+  background-color: #6c3483;
+  color: white;
+  padding: 10px 20px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  font-size: 16px;
+}
