--- a/index.css
+++ b/index.css
@@ -247,3 +247,90 @@
     background-position: 200% 0;
   }
 }
+.menu-items {
+  list-style: none;
+  padding: 0;
+}
+
+.menu-item {
+  border: 1px solid #ddd;
+  padding: 15px;
+  margin: 20px;
+  border-radius: 8px;
+  box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.1);
+  transition: transform 0.2s ease;
+}
+
+.menu-item:hover {
+  transform: scale(1.005);
+}
+
+.item-name {
+  font-size: 1.2rem;
+  font-weight: bold;
+  margin-bottom: 5px;
+}
+
+.item-price {
+  color: green;
+  font-weight: bold;
+}
+
+.item-description {
+  font-style: italic;
+  color: #555;
+}
+.res-name {
+  font-size: 1.8rem;
+  font-weight: bold;
+  color: #333;
+  margin-bottom: 10px;
+  margin-left: 15px;
+}
+
+.res-cuisine {
+  font-size: 1rem;
+  color: #555;
+  margin-bottom: 8px;
+  margin-left: 15px;
+}
+
+.res-rating {
+  font-size: 1.1rem;
+  font-weight: bold;
+  color: #444;
+  margin-bottom: 15px;
+  margin-left: 15px;
+}
+
+.res-rating span {
+  color: gold;
+}
+.menu-img {
+  width: 100px;
+  height: 100px;
+  object-fit: cover;
+  border-radius: 8px;
+  margin-top: 10px;
+}
+.menu-item {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 15px;
+  border: 1px solid #ddd;
+  border-radius: 8px;
+  margin-bottom: 15px;
+  background-color: #fff;
+}
+
+.menu-item-text {
+  flex-grow: 1;
+}
+
+.menu-img {
+  width: 120px;
+  height: 120px;
+  object-fit: cover;
+  border-radius: 8px;
+}
